[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lime-sites-sdk"
version = "0.1.0"
description = "Python SDK for LIME 2.0 site integration. Create login requests, wait for agent approval, verify JWT passports. Async-first, SSE reconnect, JWKS caching."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0,<1",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Mawyxx/lime-site-sdk"
Repository = "https://github.com/Mawyxx/lime-site-sdk"
Documentation = "https://lime.pics/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/lime_sites"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live HTTP tests against LIME API (requires LIME_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["lime_sites"]

[tool.coverage.report]
fail_under = 100

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["lime_sites"]
mypy_path = "src"
